# jarvis

./: Cargo.toml  post_build.py
crates/jarvis-app/src/: app.rs
crates/jarvis-core/: Cargo.toml
crates/jarvis-core/src/: audio.rs  config.rs  db.rs  intent.rs  lib.rs  recorder.rs  stt.rs  vosk_models.rs
crates/jarvis-core/src/config/: structs.rs
crates/jarvis-core/src/db/: structs.rs
crates/jarvis-core/src/stt/: vosk.rs
crates/jarvis-gui/: Cargo.toml
crates/jarvis-gui/src/: main.rs  tauri_commands.rs
crates/jarvis-gui/src/tauri_commands/: db.rs  etc.rs  stt.rs  sys.rs
frontend/: package-lock.json  package.json  vite.config.ts.timestamp-1767564602601-0b6e8552efaa9.mjs
frontend/src/: App.svelte  Events.svelte  functions.ts  main.ts
frontend/src/components/: Footer.svelte  Header.svelte
frontend/src/components/elements/: Stats.svelte
frontend/src/routes/settings/: index.svelte
